# simple-robot

./: .gitignore  .gitmodules  README.md  activate.sh  bringup.launch  build.sh  differential-drive.urdf  install.sh  launch.sh
arduino/: digger_firmware.ino
docker/: entrypoint.sh
kinect-freenect/: CMakeLists.txt
kinect-freenect/src/: kinect-v1.cpp
launch/: test_launch.py
py_pubsub/: package.xml
scripts/: build.sh  install-aws-cli.sh  install-greengrass.sh   install-ros-iron.sh  install-ros-noetic.sh  install.sh  launch-rviz.sh  launch.sh  setup.sh  urdf.sh
scripts/init/: setup.sh
src/: compare_depth.py  mqtt_node.py  yolov4.py
src/bag_recorder_nodes/: CMakeLists.txt  package.xml
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/kinect-freenect/: package.xml
src/kinect-freenect/src/: kinect-v1.cpp
src/py_pubsub/: setup.py
src/simple_inference/: package.xml  setup.cfg  setup.py
src/simple_inference/simple_inference/: yolov7.py
src/spider_control/: CMakeLists.txt  package.xml
src/spider_control/src/: control.cpp  control.h  datatypes.h  main.cpp  servo.cpp  servo.h  servo_handler.cpp  servo_handler.h  state_publisher.cpp  utils.cpp  utils.h
src/urdf_tutorial_r2d2/: package.xml  setup.py
src/urdf_tutorial_r2d2/launch/: demo.launch.py
src/urdf_tutorial_r2d2/urdf/: spider.urdf.xml
urdf/: r2d2-example.urdf  r2d2-example.xacro
